# vehicle-dynamics-simulation

./: .gitignore  CMakeLists.txt  EngineWorkNeeded.txt  LICENSE  README.md  Sites Used.txt  VehiclePhysicsSim.sln  linux_build.sh
VehiclePhysicsSim/: VehiclePhysicsSim.vcxproj  VehiclePhysicsSim.vcxproj.filters  imgui.ini  notes.txt  todo.txt
VehiclePhysicsSim/res/: Thumbs.db
VehiclePhysicsSim/res/images/: Thumbs.db
VehiclePhysicsSim/res/shaders/: body.frag  debug.frag  debug.vert  skyBox.frag  skyBox.vert
VehiclePhysicsSim/src/: AllCameras.h  Brake.hpp  Car.cpp  Car.h  ControlSystem.h  DebugCarModel.cpp  DebugVector.hpp  DebugVectorGroup.h  Environment.h  EnvironmentModel.h  GameCarModel.cpp  ICarModel.cpp  ICarModel.h  PacejkaMagicFormula.h  SuspensionSystem.cpp  SuspensionSystem.h  Terrain.cpp  TorqueGenerator.hpp  Track.h  UILayer.cpp  VehicleSimulation.cpp  VehicleSimulation.h  VisualShell.cpp  VisualShell.h  Wheel.cpp  WheelInterface.cpp  main.cpp
include/: Axle.hpp  CameraSystem.h  ControlSystem.h  DebugCarModel.h  DebugVector.hpp  Environment.h  Suspension.hpp  TerrainGenLayers.hpp  TorqueGenerator.hpp  Tyre.h  WheelInterface.h  WheelSystem.h  add_function.h
res/shaders/: body.vert  terrain.frag  terrain.vert
src/: AllCameras.cpp  AllCameras.h  Axle.hpp  Brake.hpp  CameraSystem.cpp  CameraSystem.h  Car.cpp  ControlSystem.cpp  DebugCarModel.cpp  DebugCarModel.h  DebugVectorGroup.cpp  DebugVectorGroup.h  Environment.cpp  EnvironmentModel.cpp  GameCarModel.cpp  GameCarModel.h  ICarModel.h  PacejkaMagicFormula.cpp  PacejkaMagicFormula.h  Suspension.hpp  Terrain.cpp  Terrain.h  TerrainGenLayers.hpp  TerrainModel.cpp  TerrainModel.h  Track.cpp  Track.h  Tyre.cpp  Tyre.h  UILayer.cpp  UILayer.h  VehicleSimulation.cpp  VisualShell.cpp  VisualShell.h  Wheel.cpp  Wheel.h  WheelInterface.cpp  WheelSystem.cpp  WheelSystem.h  dummy_main.cpp
tests/: CMakeLists.txt  test_dummy.cpp
